# ADSP

./: .gitignore  ADSP.cpp  ADSP.h  LICENSE  README.md
.github/: tests.yml
.github/workflows/: tests.yml
docs/: .index.html.swp  Doxyfile  index.html
docs/generated_docs/html/: ApHp1_8cpp_source.html  ApHp1_8h.html  ApHp1_8h_source.html  ApLp1_8cpp_source.html  ApLp1_8h.html  ApLp1_8h_source.html  Biquad_8cpp_source.html  Biquad_8h.html  Biquad_8h_source.html  OscEptr_8cpp_source.html  OscEptr_8h.html  OscEptr_8h_source.html  OscTrivial_8cpp_source.html  OscTrivial_8h.html  OscTrivial_8h_source.html  RcHp1_8cpp_source.html  RcHp1_8h.html  RcHp1_8h_source.html  RcLp1_8cpp_source.html  RcLp1_8h.html  RcLp1_8h_source.html  SkHp2_8cpp_source.html  SkHp2_8h.html  SkHp2_8h_source.html  SkLp2_8cpp_source.html  SkLp2_8h.html  SkLp2_8h_source.html  VoltPerOct_8h.html  VoltPerOct_8h_source.html  annotated.html  classadsp_1_1ApHp1-members.html  classadsp_1_1ApHp1.html  (+54 more)
source/: dsp.cpp  dsp.h
source/envelope/: Adsr.cpp  Adsr.h
source/filter/: ApHp1.cpp  ApHp1.h  ApLp1.cpp  ApLp1.h  Biquad.cpp  Biquad.h  LadderHp4Tpt.cpp  LadderHp4Tpt.h  LadderLp4Tpt.cpp  LadderLp4Tpt.h  RcHp1.cpp  RcHp1.h  RcHp1Tpt.cpp  RcHp1Tpt.h  RcLp1.cpp  RcLp1.h  RcLp1Tpt.cpp  RcLp1Tpt.h  SkHp2.cpp  SkHp2.h  SkHp2Tpt.cpp  SkHp2Tpt.h  SkLp2.cpp  SkLp2.h
source/oscillator/: Noise.cpp  Noise.h  OscEptr.cpp  OscEptr.h  OscTrivial.cpp  OscTrivial.h
source/utility/: Smooth1P.h  VoltPerOct.h  utility.cpp  utility.h
test/: CMakeLists.txt  test.cpp
test/utility/: VoltPerOct.cpp  utility.cpp
(+59 files in other folders)
